--- a/ci/requirements/docs.yml
+++ b/ci/requirements/docs.yml
@@ -32,3 +32,6 @@ dependencies:
     - sphinx-design
     - sphinx-gallery
     - sphinx_rtd_theme<3.0
+    # Dev dependencies (building PDF documentation)
+    # 'sphinxcontrib-svg2pdfconverter' is required since it's added to `extensions`.
+    - sphinxcontrib-svg2pdfconverter
