--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -57,12 +57,14 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ['3.11', '3.13']
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, ubuntu-24.04-arm, macos-latest, windows-latest]
         # Is it a draft Pull Request (true or false)?
         isDraft:
           - ${{ github.event.pull_request.draft }}
-        # Only run three jobs on Ubuntu for draft PRs
+        # Only run jobs on Ubuntu for draft PRs
         exclude:
+          - os: ubuntu-24.04-arm
+            isDraft: true
           - os: macos-latest
             isDraft: true
           - os: windows-latest
