Use the 'release-branch-semver' version scheme for setuptools_scm

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,7 @@ include = ["pygmt*"]
 exclude = ["doc"]
 
 [tool.setuptools_scm]
+version_scheme = "release-branch-semver"
 local_scheme = "node-and-date"
 fallback_version = "999.999.999+unknown"
 
