--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -26,12 +26,14 @@ jobs:
       uses: actions/checkout@v4.2.2
       with:
         path: repository
+        persist-credentials: false
 
     - name: Checkout the documentation
       uses: actions/checkout@v4.2.2
       with:
         ref: gh-pages
         path: documentation
+        persist-credentials: false
 
     - name: Link Checker
       id: lychee
