--- a/.github/workflows/type_checks.yml
+++ b/.github/workflows/type_checks.yml
@@ -34,6 +34,8 @@ jobs:
       # Checkout current git repository
       - name: Checkout
         uses: actions/checkout@v4.2.2
+        with:
+          persist-credentials: false
 
       # Setup Python
       - name: Set up Python
