Fix potential sources of code injection via template expansion
Xref https://woodruffw.github.io/zizmor/audits/#template-injection

--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -76,7 +76,8 @@ jobs:
       if: env.lychee_exit_code != 0
       run: |
         cd repository/
-        title="Link Checker Report on ${{ steps.date.outputs.date }}"
+        title="Link Checker Report on ${CURRENT_DATE}"
         gh issue create --title "$title" --body-file /tmp/lychee-out.md
       env:
         GH_TOKEN: ${{ github.token }}
+        CURRENT_DATE: ${{ steps.date.outputs.date }}
