Try running GMT build on Windows Powershell core

--- a/.github/workflows/ci_tests_dev.yaml
+++ b/.github/workflows/ci_tests_dev.yaml
@@ -122,7 +122,7 @@ jobs:
         if: runner.os != 'Windows'
 
       - name: Build GMT on Windows
-        shell: cmd
+        shell: pwsh
         run: |
           cd gmt/
           mkdir build
