--- a/.github/workflows/format-command.yml
+++ b/.github/workflows/format-command.yml
@@ -3,9 +3,13 @@
 # This workflow is triggered in a PR if the slash command `/format` is used.
 #
 name: format-command
+
 on:
   repository_dispatch:
     types: [format-command]
+
+permissions: {}
+
 jobs:
   format:
     runs-on: ubuntu-latest
@@ -23,6 +27,7 @@ jobs:
           token: ${{ steps.generate-token.outputs.token }}
           repository: ${{ github.event.client_payload.pull_request.head.repo.full_name }}
           ref: ${{ github.event.client_payload.pull_request.head.ref }}
+          persist-credentials: false
 
       # Setup Python environment
       - uses: actions/setup-python@v5.4.0
