--- a/.github/workflows/ci_docs.yml
+++ b/.github/workflows/ci_docs.yml
@@ -178,7 +178,7 @@ jobs:
           # Download the entire history
           fetch-depth: 0
           persist-credentials: true
-        if: (github.event_name == 'release' || github.event_name == 'push') && (matrix.os == 'ubuntu-latest')
+        if: (github.event_name == 'release' || github.event_name == 'pull_request') && (matrix.os == 'ubuntu-latest')
 
       - name: Push the built HTML to gh-pages
         run: |
@@ -234,4 +234,4 @@ jobs:
           echo -e "\nPushing changes to gh-pages."
           git push -fq origin gh-pages 2>&1 >/dev/null
           echo -e "\nFinished uploading generated files."
-        if: (github.event_name == 'release' || github.event_name == 'push') && (matrix.os == 'ubuntu-latest')
+        if: (github.event_name == 'release' || github.event_name == 'pull_request') && (matrix.os == 'ubuntu-latest')
