--- a/.github/workflows/ci_docs.yml
+++ b/.github/workflows/ci_docs.yml
@@ -2,15 +2,14 @@
 #
 # This workflow builds the documentation on Linux/macOS/Windows.
 #
-# It is run on every commit to the main and pull request branches, and also
-# when a new release is published.
-# In draft pull requests, only the job on Linux is triggered to save on
-# Continuous Integration resources.
+# It is run on every commit to the main and pull request branches, and also when a new 
+# release is published. In draft pull requests, only the job on Linux is triggered to 
+# save on Continuous Integration resources.
 #
 # On the main branch, the workflow also handles the documentation deployment:
 #
-# * Updating the development documentation by pushing the built HTML pages
-#   from the main branch onto the dev folder of the gh-pages branch.
+# * Updating the development documentation by pushing the built HTML pages from the main 
+#   branch onto the dev folder of the gh-pages branch.
 # * Updating the latest documentation link to the new release.
 #
 name: Docs
