--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -15,7 +15,8 @@ on:
   schedule:
     - cron: '0 12 * * 0'
 
-permissions: {}
+permissions:
+  issues: write
 
 jobs:
   check_links:
@@ -73,7 +74,7 @@ jobs:
       run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
 
     - name: Create Issue From File
-      if: env.lychee_exit_code != 0
+      if: ${{ steps.lychee.outputs.exit_code }} != 0
       run: |
         cd repository/
         title="Link Checker Report on ${CURRENT_DATE}"
