Update excluded links Co-authored-by: Dongdong Tian <seisman.info@gmail.com>

--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -66,11 +66,8 @@ jobs:
           --exclude "^https://www.pygmt.org/%7B%7Bpath%7D%7D"
           --exclude "^https://www.researchgate.net/"
           --exclude "^https://zenodo.org/badge/DOI/"
-          --exclude-path "repository/doc/**/*.rst"
-          --exclude-path "repository/doc/**/*.md"
           --verbose
-          "repository/**/*.rst"
-          "repository/**/*.md"
+          "repository/*.md"
           "repository/**/*.py"
           "documentation/dev/**/*.html"
 
