--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,6 +8,7 @@ exclude .dvcignore
 exclude .gitignore
 exclude .pre-commit-config.yaml
 exclude .readthedocs.yaml
+exclude .mailmap
 exclude AUTHORSHIP.md
 exclude CONTRIBUTING.md
 exclude Makefile
