Test geopandas=1.0 in ci_tests_legacy.yaml

--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -67,7 +67,7 @@ jobs:
             netCDF4
             packaging
             contextily
-            geopandas
+            geopandas=1.0
             ipython
             pyarrow-core
             rioxarray
