--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -61,7 +61,7 @@ jobs:
             python=3.11
             gmt=${{ matrix.gmt_version }}
             ghostscript<10
-            numpy<2
+            numpy=1.26
             pandas
             xarray
             netCDF4
