--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -1,7 +1,7 @@
 # Check links in the repository and documentation
 #
-# This workflow runs the lychee tool to check all external links in plaintext
-# and HTML files. It will create an issue if broken links are found.
+# This workflow runs the lychee tool to check all external links in plaintext and HTML
+# files. It will create an issue if broken links are found.
 #
 # It is scheduled to run weekly at 12 noon every Sunday.
 #
@@ -76,7 +76,7 @@ jobs:
       run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
 
     - name: Create Issue From File
-      if: ${{ steps.lychee.outputs.exit_code }} != 0
+      if: steps.lychee.outputs.exit_code != 0
       run: |
         cd repository/
         title="Link Checker Report on ${CURRENT_DATE}"
