--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -75,13 +75,13 @@ jobs:
             numpy-version: '1.25'
             pandas-version: '=2.1'
             xarray-version: '=2023.04'
-            optional-packages: ' contextily geopandas<1 ipython pyarrow-core rioxarray sphinx-gallery'
+            optional-packages: ' contextily geopandas ipython pyarrow-core rioxarray sphinx-gallery'
           # Python 3.13 + core packages (latest versions) + optional packages
           - python-version: '3.13'
             numpy-version: '2.2'
             pandas-version: ''
             xarray-version: ''
-            optional-packages: ' contextily geopandas>=1.0 ipython pyarrow-core rioxarray sphinx-gallery'
+            optional-packages: ' contextily geopandas ipython pyarrow-core rioxarray sphinx-gallery'
           # Python 3.12 + core packages (Linux only)
           - os: 'ubuntu-latest'
             python-version: '3.12'
