--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -70,7 +70,7 @@ jobs:
           - os: windows-latest
             isDraft: true
         include:
-          # Python 3.11 + core packages (minimum supported versions) + optional packages (minimum supported versions if any)
+          # Python 3.11 + core packages (minimum supported versions) + optional packages
           - python-version: '3.11'
             numpy-version: '1.25'
             pandas-version: '=2.1'
