--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -69,7 +69,7 @@ jobs:
             contextily=1.5
             geopandas=1.0
             ipython
-            pyarrow-core
+            pyarrow-core=16
             rioxarray
             sphinx-gallery
             make
