--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ all = [
     "contextily>=1.5",
     "geopandas>=1.0",
     "IPython",  # 'ipython' is not the correct module name.
-    "pyarrow",
+    "pyarrow>=16",
     "rioxarray",
 ]
 
