--- a/environment.yml
+++ b/environment.yml
@@ -10,7 +10,6 @@ dependencies:
     - numpy>=1.26
     - pandas>=2.1
     - xarray>=2023.07
-    - netCDF4
     - packaging
     # Optional dependencies
     - contextily>=1.5
@@ -34,6 +33,8 @@ dependencies:
     - pytest-cov
     - pytest-doctestplus
     - pytest-mpl
+    # Dev dependencies (testing)
+    - netCDF4
     # Dev dependencies (building documentation)
     - geodatasets
     - myst-nb
