--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -79,8 +79,9 @@ jobs:
 
       # Install uv package manager
       - name: Install uv
-        uses: astral-sh/setup-uv@v5.1.0
+        uses: astral-sh/setup-uv@v6.0.0
         with:
+          activate-environment: true
           python-version: 3.11
 
       # Install the package that we want to test
