--- a/.github/workflows/ci_tests_dev.yaml
+++ b/.github/workflows/ci_tests_dev.yaml
@@ -151,9 +151,9 @@ jobs:
           python -m pip install --pre --prefer-binary \
                         --extra-index https://pypi.anaconda.org/scientific-python-nightly-wheels/simple \
                         numpy pandas xarray packaging \
-                        build contextily dvc geopandas ipython pyarrow rioxarray netCDF4 \
+                        build contextily dvc geopandas ipython pyarrow rioxarray  \
                         pytest pytest-cov pytest-doctestplus pytest-mpl pytest-rerunfailures \
-                        sphinx-gallery
+                        netCDF4 sphinx-gallery
 
       # Show installed pkg information for postmortem diagnostic
       - name: List installed packages
