--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -64,7 +64,7 @@ jobs:
             numpy=1.26
             pandas
             xarray
-            packaging
+            packaging=24.2
             contextily=1.5
             geopandas=1.0
             ipython
