--- a/environment.yml
+++ b/environment.yml
@@ -10,7 +10,7 @@ dependencies:
     - numpy>=1.26
     - pandas>=2.1
     - xarray>=2023.07
-    - packaging
+    - packaging>=24.2
     # Optional dependencies
     - contextily>=1.5
     - geopandas>=1.0
