--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -153,6 +153,7 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v6.0.1
         with:
+          activate-environment: true
           python-version: ${{ matrix.python-version }}
 
       - name: Install dvc
