--- a/.github/workflows/actions/build_docs/action.yml
+++ b/.github/workflows/actions/build_docs/action.yml
@@ -1,3 +1,12 @@
+#
+# A composite action to build the documentation.
+#
+# To call the action, use:
+# ```
+# - uses: ./.github/workflows/actions/build_docs
+#   os: ubuntu-latest
+# ```
+#
 name: Build Docs
 description: Build the documentation
 inputs:
