--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -40,7 +40,7 @@ jobs:
 
     - name: Link Checker
       id: lychee
-      uses: lycheeverse/lychee-action@v2.4.1
+      uses: lycheeverse/lychee-action@82202e5e9c2f4ef1a55a3d02563e1cb6041e5332 # v2.4.1
       with:
         fail: false  # Don't fail action on broken links
         output: /tmp/lychee-out.md
