--- a/.github/workflows/dvc-diff.yml
+++ b/.github/workflows/dvc-diff.yml
@@ -30,10 +30,10 @@ jobs:
         persist-credentials: false
 
     - name: Setup data version control (DVC)
-      uses: iterative/setup-dvc@v1.1.2
+      uses: iterative/setup-dvc@2508d098217d24eef3c0e8d7bc0ce7b9ca0723c3 # v1.1.2
 
     - name: Setup continuous machine learning (CML)
-      uses: iterative/setup-cml@v2.0.0
+      uses: iterative/setup-cml@f714cd201b7183852dd6f94192b34e7618717560 # v2.0.0
 
     # Produce the markdown diff report, which should look like:
     # ## Summary of changed images
