--- a/.github/workflows/release-baseline-images.yml
+++ b/.github/workflows/release-baseline-images.yml
@@ -28,7 +28,7 @@ jobs:
         persist-credentials: false
 
     - name: Setup data version control (DVC)
-      uses: iterative/setup-dvc@v1.1.2
+      uses: iterative/setup-dvc@2508d098217d24eef3c0e8d7bc0ce7b9ca0723c3 # v1.1.2
 
     - name: Pull baseline image data from dvc remote
       run: dvc pull && ls -lhR pygmt/tests/baseline/
