--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -37,7 +37,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-22.04, ubuntu-22.04-arm, macos-14, windows-2022]
-        gmt_version: ['6.4']
+        gmt_version: ['6.4', '6.5']
     timeout-minutes: 30
     defaults:
       run:
