--- a/.github/workflows/dvc-diff.yml
+++ b/.github/workflows/dvc-diff.yml
@@ -57,9 +57,13 @@ jobs:
       env:
         repo_token: ${{ github.token }}
         PR_HEAD_SHA: ${{ github.event.pull_request.head.sha }}
+        DAGSHUB_TOKEN: ${{ secrets.DAGSHUB_TOKEN }}
       run: |
         echo -e "## Summary of changed images\n" > report.md
         echo -e "This is an auto-generated report of images that have changed on the DVC remote\n" >> report.md
+
+        # Configure DVC to use the DAGsHub remote via a token
+        dvc remote modify upstream url https://${DAGSHUB_TOKEN}@dagshub.com/GenericMappingTools/pygmt.dvc --local
 
         # Pull image data from cloud storage
         dvc pull --remote upstream
