--- a/.github/workflows/style_checks.yaml
+++ b/.github/workflows/style_checks.yaml
@@ -38,13 +38,13 @@ jobs:
 
       - name: Install packages
         run: |
-          python -m pip install ruff pre-commit
+          python -m pip install ruff prek
           python -m pip list
 
-      - name: Formatting check (ruff + pre-commit)
+      - name: Formatting check (ruff + prek)
         run: |
            make check
-           pre-commit run --all-files
+           prek run --all-files
 
       - name: Ensure example scripts have at least one code block separator
         run: |
