--- a/.github/workflows/format-command.yml
+++ b/.github/workflows/format-command.yml
@@ -38,7 +38,7 @@ jobs:
       # Install formatting tools
       - name: Install formatting tools
         run: |
-          python -m pip install ruff pre-commit
+          python -m pip install ruff prek
           python -m pip list
 
       # Run "make format" and commit the change to the PR branch
