--- a/environment.yml
+++ b/environment.yml
@@ -25,7 +25,7 @@ dependencies:
     - python-build
     # Dev dependencies (style checks)
     - codespell
-    - pre-commit
+    - prek
     - ruff>=0.12.0
     # Dev dependencies (unit testing)
     - matplotlib-base
