--- a/.github/workflows/format-command.yml
+++ b/.github/workflows/format-command.yml
@@ -8,11 +8,13 @@ on:
   repository_dispatch:
     types: [format-command]
 
-permissions:
-  contents: write
+permissions: {}
 
 jobs:
   format:
+    permissions:
+      contents: write # for Git to git push
+      pull-requests: write # for peter-evans/create-or-update-comment to create PR reaction
     runs-on: ubuntu-latest
     steps:
       # Generate token from GenericMappingTools bot
