Set CI Tests workflow to run under pr-tests github environment
Enable forked repositories to access DagsHub token, xref https://2i2c.org/blog/2025/github-action-secrets-forked-repositories/

--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -51,6 +51,8 @@ jobs:
   test:
     name: ${{ matrix.os }} - Python ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
+    environment:
+      name: pr-tests
     permissions:
       id-token: write  # This is required for requesting OIDC token for codecov
     strategy:
