Add an issue template for wrapping GMT modules

--- a/.github/ISSUE_TEMPLATE/2-feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/2-feature_request.yaml
@@ -1,4 +1,4 @@
-name: Feature request - General feature
+name: Feature request
 description: Request the addition of a new feature/functionality
 labels: ["feature request"]
 body:
