Fail the 'pull' step and check if works

--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -167,7 +167,8 @@ jobs:
         continue-on-error: true
         run: |
           uv run dvc remote modify upstream url https://${DAGSHUB_TOKEN}@dagshub.com/GenericMappingTools/pygmt.dvc --local
-          uv run dvc pull --no-run-cache --verbose && ls -lhR pygmt/tests/baseline/
+          # uv run dvc pull --no-run-cache --verbose && ls -lhR pygmt/tests/baseline/
+          exit 1
         env:
           DAGSHUB_TOKEN: ${{ secrets.DAGSHUB_TOKEN }}
 
