--- a/.github/workflows/ci_tests_dev.yaml
+++ b/.github/workflows/ci_tests_dev.yaml
@@ -165,7 +165,8 @@ jobs:
         continue-on-error: true
         run: |
           dvc remote modify upstream url https://${DAGSHUB_TOKEN}@dagshub.com/GenericMappingTools/pygmt.dvc --local
-          dvc pull --no-run-cache --verbose && ls -lhR pygmt/tests/baseline/
+          # dvc pull --no-run-cache --verbose && ls -lhR pygmt/tests/baseline/
+          exit 1
         env:
           DAGSHUB_TOKEN: ${{ secrets.DAGSHUB_TOKEN }}
 
