Apply suggestions from code review
Co-authored-by: Wei Ji <23487320+weiji14@users.noreply.github.com>

--- a/.github/workflows/cache_dvc.yaml
+++ b/.github/workflows/cache_dvc.yaml
@@ -17,7 +17,7 @@ on:
     branches: [ main ]
     paths:
       - 'pygmt/tests/baseline/*.png.dvc'
-  pull_request:  # For testing only.
+  # pull_request:  # For testing only.
   workflow_dispatch:
   # Schedule runs on 12 noon every Sunday
   schedule:
