Remove the build directory rather than the gmt source code directory

--- a/.github/workflows/ci_tests_dev.yaml
+++ b/.github/workflows/ci_tests_dev.yaml
@@ -122,8 +122,8 @@ jobs:
             -DGMT_USE_THREADS=TRUE
           cmake --build .
           cmake --build . --target install
-          cd ../../
-          rm -rf gmt
+          cd ..
+          rm -rf build
         env:
           GMT_INSTALL_DIR: ${{ runner.temp }}/gmt-install-dir
 
